# nero_chatbot

./: .gitignore  Chat.py  README.md  add_articles.py  chatbot.py  pyproject.toml  requirements.txt  streamlit_add_articles.py  streamlit_admin_area.py  streamlit_app.py  streamlit_chatbot.py  👨🏻‍💻_Admin_Area.py  🤖_AuRoRa_Chat.py  🤖_Chat.py
database/: database.py
libs/: config.py  indexing_articles.py  inference.py  model_inference.py  notebook.ipynb  prompt.py
pages/: 1_👨🏻‍💻_Admin_Area.py
